--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "qs": "^6.11.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.6.0"
+    "react-icons": "^4.6.0",
+    "react-toastify": "^9.1.1",
+    "slugify": "^1.6.5"
   }
 }
