--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.1",
+    "moment": "^2.29.4",
     "next": "13.0.1",
     "qs": "^6.11.0",
     "react": "18.2.0",
