--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cookie": "^0.5.0",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.1",
     "moment": "^2.29.4",
