Change backend sever api

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-# NEXT_PUBLIC_API_URL="https://dj-events-backend-production-3c1b.up.railway.app"
+ NEXT_PUBLIC_API_URL="https://kcs-dj-events.up.railway.app"
